infra/mongodb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      terminationGracePeriodSeconds: 120
      containers:
        - name: mongodb
          image: mongo:8.3.11@sha256:5d7043a4ffe02b9ed1b6e0bab057546981af5ca0a79107e9c461e49bc44c0a7b
          imagePullPolicy: IfNotPresent
          args:
            - "--bind_ip_all"
            - "--port=27017"
            - "--auth"
            - "--dbpath=/data/db"
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: data
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 3
        - name: mongodb-exporter
          image: docker.io/percona/mongodb_exporter:0.53.0@sha256:0214e482b2cd4b1849f9f4dcef90d328a99ba3727dd1103e7da48b42060bcec1
          imagePullPolicy: IfNotPresent
          args:
            - --mongodb.uri=mongodb://localhost:27017
            - --collect-all
            - --compatible-mode
          ports:
            - containerPort: 9216
              name: metrics
          resources:
            requests:
              memory: "32Mi"
              cpu: "20m"
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: iscsi-persistent-fs6712x
        resources:
          requests:
            storage: 5Gi
