infra/mongodb/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
