infra/mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mongodb
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: mongodb
  ports:
    - name: mongodb
      port: 27017
      protocol: TCP
